Add Epson Stylus Pro 3885 (Asia name for 3880)

--- a/NEWS
+++ b/NEWS
@@ -282,6 +282,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        EPSON B-510DN
        EPSON ME Office 600F
        EPSON ME Office 620F
+       Epson Stylus Pro 3885
 
   2) Add additional photo modes to Canon inkjet printers.
 
