Preliminary support for Epson 7700/9700

--- a/NEWS
+++ b/NEWS
@@ -283,6 +283,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        EPSON ME Office 600F
        EPSON ME Office 620F
        Epson Stylus Pro 3885
+       Epson Stylus Pro 7700 (EXPERIMENTAL)
+       Epson Stylus Pro 9700 (EXPERIMENTAL)
 
   2) Add additional photo modes to Canon inkjet printers.
 
