--- a/NEWS
+++ b/NEWS
@@ -283,6 +283,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        EPSON ME Office 600F
        EPSON ME Office 620F
        Epson Stylus Pro 3885
+       Epson Stylus Pro 4450 (EXPERIMENTAL)
        Epson Stylus Pro 7700 (EXPERIMENTAL)
        Epson Stylus Pro 7890 (EXPERIMENTAL)
        Epson Stylus Pro 9700 (EXPERIMENTAL)
