--- a/NEWS
+++ b/NEWS
@@ -255,6 +255,13 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
   1) New printers supported in this release:
 
+     Note that support for all printers marked "EXPERIMENTAL"
+     (untested) or "PRELIMINARY" (minimally tested but untuned) is
+     subject to change without notice.  Printers not marked
+     "EXPERIMENTAL" generally will not change between releases, but
+     notice will be given and if possible back compatibility will be
+     provided.
+
      - Canon inkjet printers:
 
        Canon PIXMA iP1900 (EXPERIMENTAL)
@@ -296,6 +303,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        EPSON B-510DN
        EPSON ME Office 600F
        EPSON ME Office 620F
+       Epson Stylus Photo R3000 (EXPERIMENTAL)
        Epson Stylus Pro 3885
        Epson Stylus Pro 4000 (EXPERIMENTAL)
        Epson Stylus Pro 4450 (EXPERIMENTAL)
