Add Slovenian translation

--- a/NEWS
+++ b/NEWS
@@ -373,6 +373,10 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
      curves (e. g. Cyan Hue Map) with the EPSON Stylus Photo R800,
      R1800, and R1900 would cause an error has been fixed.
 
+ 13) The Dutch translation has been updated.
+
+ 14) A Slovenian translation has been added.
+
 
 * Changes from 5.2.5
 
