added newly supported [experimental] Canon printers to NEWS file

--- a/NEWS
+++ b/NEWS
@@ -264,8 +264,20 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
      - Canon inkjet printers:
 
+       Canon PIXMA iP1000 (EXPERIMENTAL)
+       Canon PIXMA iP1200 (EXPERIMENTAL)
+       Canon PIXMA iP1300 (EXPERIMENTAL)
+       Canon PIXMA iP1500 (EXPERIMENTAL)
+       Canon PIXMA iP1600 (EXPERIMENTAL)
+       Canon PIXMA iP1700 (EXPERIMENTAL)
+       Canon PIXMA iP1800 (EXPERIMENTAL)
        Canon PIXMA iP1900 (EXPERIMENTAL)
+       Canon PIXMA iP2000 (EXPERIMENTAL)
+       Canon PIXMA iP2200 (EXPERIMENTAL)
+       Canon PIXMA iP2500 (EXPERIMENTAL)
+       Canon PIXMA iP2600 (EXPERIMENTAL)
        Canon PIXMA iP2700
+       Canon PIXMA iP3100 (EXPERIMENTAL)
        Canon PIXMA iP4700
        Canon PIXMA MG5100
        Canon PIXMA MG5200
