--- a/NEWS
+++ b/NEWS
@@ -385,7 +385,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
      curves (e. g. Cyan Hue Map) with the EPSON Stylus Photo R800,
      R1800, and R1900 would cause an error has been fixed.
 
- 13) The Dutch translation has been updated.
+ 13) The Dutch and Italian translations have been updated.
 
  14) A Slovenian translation has been added.
 
