updated NEWS file with Canon MP493, MX420, MX880, iX6500

--- a/NEWS
+++ b/NEWS
@@ -279,6 +279,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP2700
        Canon PIXMA iP3100 (EXPERIMENTAL)
        Canon PIXMA iP4700
+       Canon PIXMA iX6500 (EXPERIMENTAL)
        Canon PIXMA MG5100
        Canon PIXMA MG5200
        Canon PIXMA MG6100
@@ -289,6 +290,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP450
        Canon PIXMA MP460
        Canon PIXMA MP480
+       Canon PIXMA MP493 (EXPERIMENTAL)
        Canon PIXMA MP495
        Canon PIXMA MP520
        Canon PIXMA MP540
@@ -302,10 +304,12 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MX330 (EXPERIMENTAL)
        Canon PIXMA MX340 (EXPERIMENTAL)
        Canon PIXMA MX350 (EXPERIMENTAL)
+       Canon PIXMA MX420 (EXPERIMENTAL)
        Canon PIXMA MX700 (EXPERIMENTAL)
        Canon PIXMA MX850 (EXPERIMENTAL)
        Canon PIXMA MX860 (EXPERIMENTAL)
        Canon PIXMA MX870 (EXPERIMENTAL)
+       Canon PIXMA MX880 (EXPERIMENTAL)
        Canon PIXMA MX7600 (EXPERIMENTAL)
 
      - Epson inkjet printers:
