revised experimental Canon Pro9500 and added experimental support Pro9000, Pro9000 Mk.II, Pro9500 Mk.II

--- a/NEWS
+++ b/NEWS
@@ -279,6 +279,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP2700
        Canon PIXMA iP3100 (EXPERIMENTAL)
        Canon PIXMA iP4700
+       Canon PIXMA iP4800 (EXPERIMENTAL)
        Canon PIXMA iX6500 (EXPERIMENTAL)
        Canon PIXMA MG5100
        Canon PIXMA MG5200
@@ -313,6 +314,10 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MX870 (EXPERIMENTAL)
        Canon PIXMA MX880 (EXPERIMENTAL)
        Canon PIXMA MX7600 (EXPERIMENTAL)
+       Canon PIXMA Pro9000 (EXPERIMENTAL)
+       Canon PIXMA Pro9000 Mk.II (EXPERIMENTAL)
+       Canon PIXMA Pro9500 (EXPERIMENTAL)
+       Canon PIXMA Pro9500 Mk.II (EXPERIMENTAL)
 
      - Epson inkjet printers:
 
