Add Ukrainian translation

--- a/NEWS
+++ b/NEWS
@@ -411,7 +411,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
  15) The Dutch and Italian translations have been updated.
 
- 16) A Slovenian translation has been added.
+ 16) Slovenian and Ukrainian translations have been added.
 
 
 * Changes from 5.2.5
