Update authors file.

--- a/AUTHORS
+++ b/AUTHORS
@@ -75,6 +75,9 @@ Karl Heinz Kremer	<khk@khk.net>
 Karsten Festag		<karsten.festag@gmx.de>
 	Canon S200 support
 
+Matthew Broughton	<walterwego@macosx.com>
+	Mac support
+
 Mark Tomlinson		<mark.tomlinson@xtra.co.nz>
 	Implementation of Raph Levien's EvenTone dither
 
