corrected Canon PIXMA iP3100, iP3500 drivers in printers.xml. Added iP3300 support (similar to iP3500, but ifferent media selection).

--- a/NEWS
+++ b/NEWS
@@ -266,6 +266,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
      - Canon inkjet printers:
 
        Canon PIXMA iP3500 (EXPERIMENTAL)
+       Canon PIXMA iP3300 (EXPERIMENTAL)
+       Canon PIXMA MP190  (EXPERIMENTAL)
 
      - Epson inkjet printers:
 
