Added support for Canon iP6210D, iP6220D, iP6310D. Uses cartridge selection, but currently only use of both is supported. Other option is color-only.

--- a/NEWS
+++ b/NEWS
@@ -269,6 +269,9 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP3500 (EXPERIMENTAL)
        Canon PIXMA iP3300 (EXPERIMENTAL)
        Canon PIXMA iP4900 (EXPERIMENTAL)
+       Canon PIXMA iP6210D(EXPERIMENTAL)
+       Canon PIXMA iP6220D(EXPERIMENTAL)
+       Canon PIXMA iP6310D(EXPERIMENTAL)
        Canon PIXMA MP375R
        Canon PIXMA MP190  (EXPERIMENTAL)
        Canon PIXMA MP470  (EXPERIMENTAL)
