Added experimental support for Canon iP7500. Corrected inkset also required for MP960.

--- a/NEWS
+++ b/NEWS
@@ -273,6 +273,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP6220D(EXPERIMENTAL)
        Canon PIXMA iP6310D(EXPERIMENTAL)
        Canon PIXMA iP7100 (EXPERIMENTAL)
+       Canon PIXMA iP7500 (EXPERIMENTAL)
        Canon PIXMA iP8100 (EXPERIMENTAL)
        Canon PIXMA iP8600 (EXPERIMENTAL)
        Canon PIXMA iP9910 (EXPERIMENTAL)
