Separated Canon iP4100 from iP4000, giving it a new definition with corrected control set. Modes are nominally as for iP4000.

--- a/NEWS
+++ b/NEWS
@@ -306,6 +306,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
      major changes carried out in the supported modes:
 
        Canon PIXMA iP5000 (EXPERIMENTAL)
+       Canon PIXMA iP4100 (EXPERIMENTAL)
 
 * Changes from 5.2.6
 
