Added experimental support for Canon i450, i455 and i470D.

--- a/NEWS
+++ b/NEWS
@@ -270,6 +270,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA i250   (EXPERIMENTAL)
        Canon PIXMA i320   (EXPERIMENTAL)
        Canon PIXMA i350   (EXPERIMENTAL)
+       Canon PIXMA i450   (EXPERIMENTAL)
+       Canon PIXMA i455   (EXPERIMENTAL)
        Canon PIXMA iP3600 (EXPERIMENTAL)
        Canon PIXMA iP3500 (EXPERIMENTAL)
        Canon PIXMA iP3300 (EXPERIMENTAL)
