Changed printer definition, modes, media, sources for Canon MP700, MP730. Japanese model adds inkjet Hagaki, Hagaki and CD support, but also has SelectParallel=ECP in initialization, therefore kept this even though US model does not use it.

--- a/NEWS
+++ b/NEWS
@@ -350,6 +350,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP5000 (EXPERIMENTAL)
        Canon PIXMA MP600
        Canon PIXMA MP970
+       Canon PIXMA MP700
+       Canon PIXMA MP730
 
        *1: for compatibility, the original printers are named with
         "old" appended. These old printers will be deprecated in a
