Changed printer definition and capabilities for Canon MP750 and its clones: MP760, MP770, MP780, MP790. Media and sources adjusted. Modes remain as for iP4000 (but using iP4100 which are identical to iP4000).

--- a/NEWS
+++ b/NEWS
@@ -349,6 +349,11 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP4100 (EXPERIMENTAL)
        Canon PIXMA iP5000 (EXPERIMENTAL)
        Canon PIXMA MP600
+       Canon PIXMA MP750
+       Canon PIXMA MP760
+       Canon PIXMA MP770
+       Canon PIXMA MP780
+       Canon PIXMA MP790
        Canon PIXMA MP970
 
        *1: for compatibility, the original printers are named with
