updated NEWS for SELPHY series without CP-600

--- a/NEWS
+++ b/NEWS
@@ -426,6 +426,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP110
        Canon PIXMA MP130
        Canon PIXMA PRO-1 *3
+       Canon SELPHY CP-600 *4
        Canon SELPHY CP-720 *4
        Canon SELPHY CP-780 *4
        Canon SELPHY CP-800 *4
