--- a/NEWS
+++ b/NEWS
@@ -349,15 +349,12 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        present, we do not have a schedule for adding support for the
        green and orange inks.
 
-  2) A crash with the EPSON Stylus Photo R3000 has been fixed.
+  2) A problem whereby printing did not work at all on some Linux
+     distributions has been fixed (3299815 CUPS PPD broken on Linux).
 
-  3) Chinese (Mandarin), Galician, and Ukrainian translations have
-     been added.
+  3) A crash with the EPSON Stylus Photo R3000 has been fixed.
 
-  4) (API) Added function stp_vars_copy_from() to override settings in
-     one settings object with those in another.
-
-  5) The following printer models were completely redefined or had
+  4) The following printer models were completely redefined or had
      major changes carried out in the supported modes:
 
        Canon   BJC 3000   (EXPERIMENTAL)
@@ -385,8 +382,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
         "old" appended. These old printers will be deprecated in a
         future release.
 
-   6) Support for the following printers was greatly improved, or
-      tested:
+  5) Support for the following printers was greatly improved, or
+     tested:
 
        Canon PIXMA MP700
        Canon PIXMA MP710
@@ -399,9 +396,9 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP4000
        Canon PIXMA MG5100
 
-    7) The following printer models were either not added, or removed,
-       as they cannot currently be supported, even experimentally,
-       owing to an as-yet unknown command format or other issues:
+  6) The following printer models were either not added, or removed,
+     as they cannot currently be supported, even experimentally, owing
+     to an as-yet unknown command format or other issues:
 
        Canon PIXMA i250
        Canon PIXMA i320
@@ -443,8 +440,14 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
           (WIP)
        *4: requires special communication protocol
 
-  8) Canon BJC series printers using photo cartridge have printing modes
+  7) Canon BJC series printers using photo cartridge have printing modes
      added that will select this cartridge.
+
+  8) Chinese (Mandarin), Galician, and Ukrainian translations have
+     been added.
+
+  9) (API) Added function stp_vars_copy_from() to override settings in
+     one settings object with those in another.
 
 
 * Changes from 5.2.6
