Added Canon MX320, same as MX330.

--- a/NEWS
+++ b/NEWS
@@ -317,6 +317,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP490  (EXPERIMENTAL)
        Canon PIXMA MP530  (EXPERIMENTAL)
        Canon PIXMA MP900  (EXPERIMENTAL)
+       Canon PIXMA MX320  (EXPERIMENTAL)
        Canon PIXMA MX370  (EXPERIMENTAL)
        Canon PIXMA MX430  (EXPERIMENTAL)
        Canon PIXMA MX510  (EXPERIMENTAL)
