Added Canon i9950, clone of i9900.

--- a/NEWS
+++ b/NEWS
@@ -317,6 +317,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA i6500  (EXPERIMENTAL)
        Canon PIXMA i9100  (EXPERIMENTAL)
        Canon PIXMA i9900  (EXPERIMENTAL)
+       Canon PIXMA i9950  (EXPERIMENTAL)
        Canon PIXMA iP90   (EXPERIMENTAL)
        Canon PIXMA iP90v  (EXPERIMENTAL)
        Canon PIXMA iP100  (EXPERIMENTAL)
